--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="last_updated_label">Обновлено:</string>
     <string name="action_settings">Settings</string>
     <string name="currency">Валюта конвертации:</string>
+    <string name="reflash">Обновить</string>
+    <string name="settings">Настройки</string>
 </resources>
